# powertop

./: .gitignore  Android.mk  CONTRIBUTE.md  ChangeLog  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  README.md  README.traceevent  TODO  abstract_cpu.cpp  aclocal.m4  autogen.sh  commitmsg.txt  config.h.in  configure  configure.ac  cpu.cpp  cpu.h  cpu_core.cpp  cpu_linux.cpp  cpu_package.cpp  csstoh.c  devlist.cpp  devlist.h  display.cpp  display.h  html.cpp  html.h  intel_cpus.cpp  intel_cpus.h  lib.c  lib.cpp  lib.h  local.md  main.cpp  meson.build  ncurses.h  (+3 more)
src/: Makefile.am  Makefile.in  csstoh.c  csstoh.sh  devlist.cpp  devlist.h  display.cpp  display.h  gpu-tab.cpp  lib.cpp  lib.h  main.cpp  powertop.css  report.cpp  report.h  test_framework.cpp  test_framework.h
src/calibrate/: calibrate.cpp  calibrate.h
src/cpu/: abstract_cpu.cpp  cpu.cpp  cpu.h  cpu_core.cpp  cpu_linux.cpp  cpu_package.cpp  cpu_rapl_device.cpp  cpu_rapl_device.h  cpudevice.cpp  cpudevice.h  dram_rapl_device.cpp  dram_rapl_device.h  frequency.cpp  frequency.h  intel_cpus.cpp  intel_cpus.h  intel_gpu.cpp
src/cpu/rapl/: rapl_interface.cpp  rapl_interface.h
src/devices/: ahci.cpp  ahci.h  alsa.cpp  alsa.h  backlight.cpp  backlight.h  devfreq.cpp  devfreq.h  device.cpp  device.h  device_manager.cpp  gpu_rapl_device.cpp  gpu_rapl_device.h  i915-gpu.cpp  i915-gpu.h  network.cpp  network.h  rfkill.cpp  rfkill.h  runtime_pm.cpp  runtime_pm.h  thinkpad-fan.cpp  thinkpad-fan.h  thinkpad-light.cpp  thinkpad-light.h  usb.cpp  usb.h
src/measurement/: acpi.cpp  acpi.h  extech.cpp  extech.h  measurement.cpp  measurement.h  measurement_manager.cpp  opal-sensors.cpp  opal-sensors.h  sysfs.cpp  sysfs.h
src/parameters/: learn.cpp  parameters.cpp  parameters.h  persistent.cpp
src/perf/: perf.cpp  perf.h  perf_bundle.cpp  perf_bundle.h  perf_event.h
src/process/: do_process.cpp  interrupt.cpp  interrupt.h  powerconsumer.cpp  powerconsumer.h  process.cpp  process.h  processdevice.cpp  processdevice.h  timer.cpp  timer.h  work.cpp  work.h
src/report/: report-data-html.cpp  report-data-html.h  report-formatter-base.cpp  report-formatter-base.h  report-formatter-csv.cpp  report-formatter-csv.h  report-formatter-html.cpp  report-formatter-html.h  report-formatter-md.cpp  report-formatter-null.cpp  report-formatter-null.h  report-formatter-plain.cpp  report-formatter-plain.h  report-formatter.h  report-maker.cpp  report-maker.h  report.cpp  report.h
src/tuning/: bluetooth.cpp  bluetooth.h  cpufreq.cpp  cpufreq.h  ethernet.cpp  ethernet.h  iw.c  iw.h  nl80211.h  runtime.cpp  runtime.h  tunable.cpp  tunable.h  tuning.cpp  tuning.h  tuningi2c.cpp  tuningi2c.h  tuningsysfs.cpp  tuningsysfs.h  tuningusb.cpp  tuningusb.h  wifi.cpp  wifi.h
src/wakeup/: waketab.cpp  wakeup.cpp  wakeup.h  wakeup_ethernet.cpp  wakeup_ethernet.h  wakeup_usb.cpp  wakeup_usb.h
tests/base/: meson.build  powerconsumer_stubs.cpp  stub_runtime_pm.cpp  test_abstract_cpu_base.cpp  test_bt_tunable.cpp  test_cpu_core_package.cpp  test_cpu_linux.cpp  test_device_base.cpp  test_eth_tunable.cpp  test_ethernet_wakeup.cpp  test_interrupt_serialize.cpp  test_learn_parameters.cpp  test_nhm_cpu.cpp  test_parameters.cpp  test_power_consumer_base.cpp  test_power_meter_base.cpp  test_process.cpp  test_processdevice.cpp  test_runtime.cpp  test_sysfs_power_meter.cpp  test_sysfs_tunable_methods.cpp  test_timer.cpp  test_tunable_base.cpp  test_tuningi2c.cpp  test_tuningusb.cpp  test_usb_wakeup.cpp  test_wakeup_base.cpp  test_work.cpp
tests/base/data/: eth_toggle_script_disabled.ptrecord  eth_toggle_script_enabled.ptrecord  i2c_device_auto.ptrecord  i2c_device_on.ptrecord  i2c_toggle_auto.ptrecord  i2c_toggle_on.ptrecord  kallsyms_one_entry.ptrecord  process_find.ptrecord  process_kernel.ptrecord  process_user.ptrecord  runtime_control_auto.ptrecord  runtime_control_on.ptrecord  runtime_pci_with_id.ptrecord  runtime_usb_has_pm.ptrecord  runtime_usb_no_pm.ptrecord  sysfs_charging.ptrecord  sysfs_discharging_direct.ptrecord  sysfs_discharging_fallback.ptrecord  timer_empty_stats.ptrecord  timer_test.ptrecord  tunable_currently_bad.ptrecord  tunable_currently_good.ptrecord  tunable_toggle_good_prior_bad.ptrecord  usb_wakeup_disabled.ptrecord  usb_wakeup_enabled.ptrecord  usbtunable_anon_on.ptrecord  usbtunable_named_auto.ptrecord  usbtunable_toggle_from_bad.ptrecord  usbtunable_toggle_from_good.ptrecord
tests/devices/: device_stub.cpp  meson.build  stub_display.cpp  stub_rapl.cpp  stub_rapl_iface.cpp  stub_report.cpp  test_acpi_power_meter.cpp  test_ahci.cpp  test_alsa_serialize.cpp  test_backlight_serialize.cpp  test_cpudevice.cpp  test_devfreq.cpp  test_i915.cpp  test_opal_sensors.cpp  test_rapl_devices.cpp  test_rfkill_serialize.cpp  test_runtime_pm_serialize.cpp  test_stubs.cpp  test_sysfs_tunable.cpp  test_thinkpad_serialize.cpp  test_usbdevice_serialize.cpp
tests/devices/data/: acpi_charging.ptrecord  acpi_discharging_fallback.ptrecord  acpi_discharging_power_now.ptrecord  ahci_host99.ptrecord  alsa_hwC0D0.ptrecord  backlight_cycle.ptrecord  backlight_start.ptrecord  devfreq_end.ptrecord  devfreq_start.ptrecord  opal_power_42w.ptrecord  opal_power_zero.ptrecord  rapl_domain_cycle.ptrecord  rapl_near_zero.ptrecord  rapl_zero_delta.ptrecord  rfkill_blocked.ptrecord  rfkill_device_device_driver.ptrecord  rfkill_device_driver.ptrecord  rfkill_no_driver.ptrecord  rfkill_not_blocked.ptrecord  runtime_pm_active.ptrecord  runtime_pm_idle.ptrecord  runtime_pm_mixed.ptrecord  sysfs_tunable_bad.ptrecord  sysfs_tunable_good.ptrecord  thinkpad_fan_cycle.ptrecord  thinkpad_light_cycle.ptrecord  usb_hub.ptrecord  usb_measurement.ptrecord  usb_named.ptrecord  usb_product_only.ptrecord
tests/lib/: meson.build  test_lib_kallsyms_empty.cpp  test_lib_misc.cpp  test_lib_pci.cpp  test_lib_pure.cpp  test_lib_sysfs.cpp  test_lib_system.cpp
tests/lib/data/: replay_kallsyms.ptrecord  replay_kallsyms_empty.ptrecord  replay_msr_read.ptrecord  replay_sysfs_reads.ptrecord  replay_write_sysfs.ptrecord
tests/report/: meson.build  test_csv_report.cpp  test_html_report.cpp
(+179 files in other folders)
